src/objects/Facility_Stay__c.object
<CustomObject>
    <fields>
        <fullName>Admit_Date__c</fullName>
        <label>Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Billed__c</fullName>
        <label>Amount Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Discharge_Date__c</fullName>
        <label>Anticipated Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Collected__c</fullName>
        <label>Cash Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chart_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chart ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_LOC__c</fullName>
        <label>Current LOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Days_Authorized__c</fullName>
        <label>Detox Days Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discharge to</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Episodes_of_Care</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Billing_Patient_ID__c</fullName>
        <externalId>true</externalId>
        <label>Facility Billing Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility ID</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facility Stays</relationshipLabel>
        <relationshipName>Facility_Stays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IOP_Days_Authorized__c</fullName>
        <label>IOP Days Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Number__c</fullName>
        <label>MR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Days_Authorized__c</fullName>
        <label>OP Days Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Episodes_of_Care</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PHP_Days_Authorized__c</fullName>
        <label>PHP Days Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Days_Authorized__c</fullName>
        <label>Residential Days Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Facility Stay</label>
    <nameField>
        <label>Facility Stay Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Stays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>